# Projects

./: README.md
Computer Vison Mini projects/: README.md
Computer Vison Mini projects/Image_Compression/: handout.ipynb  image_compressor.py
Computer Vison Mini projects/Image_Compression/submission/: 001.npy  002.npy  004.npy  012.npy  015.npy  016.npy  022.npy  024.npy  034.npy  036.npy  039.npy  043.npy  045.npy  047.npy  048.npy  049.npy  062.npy  067.npy  070.npy  073.npy  077.npy  081.npy  088.npy  092.npy  097.npy  100.npy  102.npy  103.npy  104.npy  114.npy  120.npy  125.npy  131.npy  134.npy  135.npy  142.npy  143.npy  150.npy  152.npy  154.npy  (+12 more)
Computer Vison Mini projects/Segmentation/: extract_patches.py  handout.ipynb  test.py
Computer Vison Mini projects/Segmentation/submission/: image_segmenter.py  kmeans.py
Computer Vison Mini projects/Stereo_3D_reconstruction/: extract_patches.py  stereo_3d_recon.py
Computer Vison Mini projects/Transfer Learning/: handout_addendum.ipynb
Computer Vison Mini projects/cnn_classification/: cnn_network.py  handout.ipynb  transforms.py
UNO_GAME/: build.sh  kill.sh
UNO_GAME/docs/: config
UNO_GAME/docs/html/: ConnectionPanel_8h_source.html  (+148 more)
UNO_GAME/sockpp/: CMakeLists.txt
UNO_GAME/unit-tests/: card_test.cpp  player_test.cpp  request_handler_test.cpp
unorganized/: .gitignore  CMakeLists.txt  README.md  runclients.sh  runserver.sh  test.sh
unorganized/docs/: doxygen_documentation.html.lnk
unorganized/unit-tests/: CMakeLists.txt  discard_pile_test.cpp  draw_pile_test.cpp  game_state_test.cpp  hand_test.cpp
(+297 files in other folders)
